--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="de">
- <head>
+<!DOCTYPE html><html lang="de"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Über uns - AutoElite Deutschland | Premium Fahrzeugdienstleistungen</title>
@@ -37,10 +35,10 @@
   <main id="main-content">
    <nav class="l-breadcrumb" aria-label="Brotkrumennavigation">
     <div class="l-container">
-     <ol class="c-breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
-      <li class="c-breadcrumb__item" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="index.html" class="c-breadcrumb__link" itemprop="item"> <span itemprop="name">Start</span> </a>
+     <ol class="c-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+      <li class="c-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem"><a href="index.html" class="c-breadcrumb__link" itemprop="item"> <span itemprop="name">Start</span> </a>
        <meta itemprop="position" content="1"></li>
-      <li class="c-breadcrumb__item" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><span class="c-breadcrumb__current" itemprop="name" aria-current="page">Über uns</span>
+      <li class="c-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem"><span class="c-breadcrumb__current" itemprop="name" aria-current="page">Über uns</span>
        <meta itemprop="position" content="2"></li>
      </ol>
     </div>
@@ -64,7 +62,7 @@
       </div>
       <div class="c-story__media" data-aos="fade-left">
        <div class="c-ratio c-ratio--16x9">
-        <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&amp;h=600&amp;fit=crop" alt="Moderne Autowerkstatt mit Fahrzeugen, professionelles Umfeld, hochwertige Ausstattung" class="c-story__image" width="800" height="600" loading="lazy">
+        <img src="img/13901209.jpg" alt="Moderne Autowerkstatt mit Fahrzeugen, professionelles Umfeld, hochwertige Ausstattung" class="c-story__image" width="800" height="600" loading="lazy">
        </div>
       </div>
      </div>
@@ -80,7 +78,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <rect x="8" y="8" width="48" height="48" rx="8" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M24 32L30 38L40 26" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+         <rect x="8" y="8" width="48" height="48" rx="8" stroke="currentColor" stroke-width="3" fill="none"></rect> <path d="M24 32L30 38L40 26" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Qualität</h3>
@@ -89,7 +87,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <circle cx="32" cy="32" r="24" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M32 16V32L42 42" stroke="currentColor" stroke-width="3" stroke-linecap="round" />
+         <circle cx="32" cy="32" r="24" stroke="currentColor" stroke-width="3" fill="none"></circle> <path d="M32 16V32L42 42" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Zuverlässigkeit</h3>
@@ -98,7 +96,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M32 8L40 24H56L44 36L48 52L32 42L16 52L20 36L8 24H24L32 8Z" stroke="currentColor" stroke-width="3" fill="none" />
+         <path d="M32 8L40 24H56L44 36L48 52L32 42L16 52L20 36L8 24H24L32 8Z" stroke="currentColor" stroke-width="3" fill="none"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Exzellenz</h3>
@@ -107,7 +105,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M32 48C40.8366 48 48 40.8366 48 32C48 23.1634 40.8366 16 32 16C23.1634 16 16 23.1634 16 32C16 40.8366 23.1634 48 32 48Z" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M32 22V32H42" stroke="currentColor" stroke-width="3" stroke-linecap="round" />
+         <path d="M32 48C40.8366 48 48 40.8366 48 32C48 23.1634 40.8366 16 32 16C23.1634 16 16 23.1634 16 32C16 40.8366 23.1634 48 32 48Z" stroke="currentColor" stroke-width="3" fill="none"></path> <path d="M32 22V32H42" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Innovation</h3>
@@ -116,7 +114,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <circle cx="24" cy="24" r="8" stroke="currentColor" stroke-width="3" fill="none" /> <circle cx="44" cy="32" r="8" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M16 48C16 42 20 38 24 38C28 38 32 42 32 48" stroke="currentColor" stroke-width="3" stroke-linecap="round" /> <path d="M36 52C36 46 40 42 44 42C48 42 52 46 52 52" stroke="currentColor" stroke-width="3" stroke-linecap="round" />
+         <circle cx="24" cy="24" r="8" stroke="currentColor" stroke-width="3" fill="none"></circle> <circle cx="44" cy="32" r="8" stroke="currentColor" stroke-width="3" fill="none"></circle> <path d="M16 48C16 42 20 38 24 38C28 38 32 42 32 48" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path> <path d="M36 52C36 46 40 42 44 42C48 42 52 46 52 52" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Kundenorientierung</h3>
@@ -125,7 +123,7 @@
       <div class="c-card c-card--value" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card__icon">
         <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M32 8V20M32 44V56M56 32H44M20 32H8" stroke="currentColor" stroke-width="3" stroke-linecap="round" /> <circle cx="32" cy="32" r="8" stroke="currentColor" stroke-width="3" fill="none" />
+         <path d="M32 8V20M32 44V56M56 32H44M20 32H8" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path> <circle cx="32" cy="32" r="8" stroke="currentColor" stroke-width="3" fill="none"></circle>
         </svg>
        </div>
        <h3 class="c-card__title">Nachhaltigkeit</h3>
@@ -196,7 +194,7 @@
       <div class="c-card c-card--team" data-aos="zoom-in" data-aos-delay="100">
        <div class="c-card__media">
         <div class="c-ratio c-ratio--1x1">
-         <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Professioneller Geschäftsmann, Führungskraft, Automobilbranche, Erfahrung" class="c-card__avatar" width="400" height="400" loading="lazy">
+         <img src="img/7052.jpg" alt="Professioneller Geschäftsmann, Führungskraft, Automobilbranche, Erfahrung" class="c-card__avatar" width="400" height="400" loading="lazy">
         </div>
        </div>
        <div class="c-card__body">
@@ -208,7 +206,7 @@
       <div class="c-card c-card--team" data-aos="zoom-in" data-aos-delay="200">
        <div class="c-card__media">
         <div class="c-ratio c-ratio--1x1">
-         <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Professionelle Geschäftsfrau, technische Leitung, Automobilbranche, Expertise" class="c-card__avatar" width="400" height="400" loading="lazy">
+         <img src="img/330452.jpg" alt="Professionelle Geschäftsfrau, technische Leitung, Automobilbranche, Expertise" class="c-card__avatar" width="400" height="400" loading="lazy">
         </div>
        </div>
        <div class="c-card__body">
@@ -220,7 +218,7 @@
       <div class="c-card c-card--team" data-aos="zoom-in" data-aos-delay="300">
        <div class="c-card__media">
         <div class="c-ratio c-ratio--1x1">
-         <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Professioneller Mechaniker, Werkstattleiter, Kfz-Meister, Fachkompetenz" class="c-card__avatar" width="400" height="400" loading="lazy">
+         <img src="img/1346.jpg" alt="Professioneller Mechaniker, Werkstattleiter, Kfz-Meister, Fachkompetenz" class="c-card__avatar" width="400" height="400" loading="lazy">
         </div>
        </div>
        <div class="c-card__body">
@@ -232,7 +230,7 @@
       <div class="c-card c-card--team" data-aos="zoom-in" data-aos-delay="400">
        <div class="c-card__media">
         <div class="c-ratio c-ratio--1x1">
-         <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Professionelle Kundenbetreuerin, Service, Beratung, Kundenzufriedenheit" class="c-card__avatar" width="400" height="400" loading="lazy">
+         <img src="img/11716.jpg" alt="Professionelle Kundenbetreuerin, Service, Beratung, Kundenzufriedenheit" class="c-card__avatar" width="400" height="400" loading="lazy">
         </div>
        </div>
        <div class="c-card__body">
@@ -249,7 +247,7 @@
      <div class="l-grid l-grid--2col l-grid--reverse">
       <div class="c-culture__media" data-aos="fade-right">
        <div class="c-ratio c-ratio--4x3">
-        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&amp;h=600&amp;fit=crop" alt="Teamwork in modernem Büro, Zusammenarbeit, Innovation, Unternehmenskultur" class="c-culture__image" width="800" height="600" loading="lazy">
+        <img src="img/17589.jpg" alt="Teamwork in modernem Büro, Zusammenarbeit, Innovation, Unternehmenskultur" class="c-culture__image" width="800" height="600" loading="lazy">
        </div>
       </div>
       <div class="c-culture__content" data-aos="fade-left">
@@ -276,7 +274,7 @@
       <div class="c-membership" data-aos="fade-up" data-aos-delay="100">
        <div class="c-membership__logo">
         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <circle cx="40" cy="40" r="35" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M40 15L48 32H65L52 43L56 60L40 50L24 60L28 43L15 32H32L40 15Z" fill="currentColor" />
+         <circle cx="40" cy="40" r="35" stroke="currentColor" stroke-width="3" fill="none"></circle> <path d="M40 15L48 32H65L52 43L56 60L40 50L24 60L28 43L15 32H32L40 15Z" fill="currentColor"></path>
         </svg>
        </div>
        <h3 class="c-membership__name">ISO 9001:2015</h3>
@@ -285,7 +283,7 @@
       <div class="c-membership" data-aos="fade-up" data-aos-delay="200">
        <div class="c-membership__logo">
         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <rect x="15" y="15" width="50" height="50" rx="8" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M30 40L37 47L50 33" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+         <rect x="15" y="15" width="50" height="50" rx="8" stroke="currentColor" stroke-width="3" fill="none"></rect> <path d="M30 40L37 47L50 33" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
        </div>
        <h3 class="c-membership__name">TÜV Rheinland</h3>
@@ -294,7 +292,7 @@
       <div class="c-membership" data-aos="fade-up" data-aos-delay="300">
        <div class="c-membership__logo">
         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M40 10L50 30L72 33L56 48L60 70L40 59L20 70L24 48L8 33L30 30L40 10Z" stroke="currentColor" stroke-width="3" fill="none" />
+         <path d="M40 10L50 30L72 33L56 48L60 70L40 59L20 70L24 48L8 33L30 30L40 10Z" stroke="currentColor" stroke-width="3" fill="none"></path>
         </svg>
        </div>
        <h3 class="c-membership__name">ZDK Mitglied</h3>
@@ -303,7 +301,7 @@
       <div class="c-membership" data-aos="fade-up" data-aos-delay="400">
        <div class="c-membership__logo">
         <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <circle cx="40" cy="40" r="30" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M25 40L35 50L55 30" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+         <circle cx="40" cy="40" r="30" stroke="currentColor" stroke-width="3" fill="none"></circle> <path d="M25 40L35 50L55 30" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
        </div>
        <h3 class="c-membership__name">Premium Partner</h3>
@@ -344,7 +342,7 @@
       <div class="c-card c-card--contact" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card__icon">
         <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M8 12L24 24L40 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" /> <rect x="6" y="10" width="36" height="28" rx="3" stroke="currentColor" stroke-width="3" fill="none" />
+         <path d="M8 12L24 24L40 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"></path> <rect x="6" y="10" width="36" height="28" rx="3" stroke="currentColor" stroke-width="3" fill="none"></rect>
         </svg>
        </div>
        <h3 class="c-card__title">E-Mail</h3>
@@ -353,7 +351,7 @@
       <div class="c-card c-card--contact" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card__icon">
         <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M14 8C14 8 10 10 10 14C10 26 22 38 34 38C38 38 40 34 40 34L36 28L32 30C28 28 20 20 18 16L20 12L14 8Z" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" />
+         <path d="M14 8C14 8 10 10 10 14C10 26 22 38 34 38C38 38 40 34 40 34L36 28L32 30C28 28 20 20 18 16L20 12L14 8Z" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Telefon</h3>
@@ -362,7 +360,7 @@
       <div class="c-card c-card--contact" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card__icon">
         <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M24 42C33.9411 42 42 33.9411 42 24C42 14.0589 33.9411 6 24 6C14.0589 6 6 14.0589 6 24C6 33.9411 14.0589 42 24 42Z" stroke="currentColor" stroke-width="3" fill="none" /> <path d="M24 14V24L30 30" stroke="currentColor" stroke-width="3" stroke-linecap="round" />
+         <path d="M24 42C33.9411 42 42 33.9411 42 24C42 14.0589 33.9411 6 24 6C14.0589 6 6 14.0589 6 24C6 33.9411 14.0589 42 24 42Z" stroke="currentColor" stroke-width="3" fill="none"></path> <path d="M24 14V24L30 30" stroke="currentColor" stroke-width="3" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-card__title">Öffnungszeiten</h3>
@@ -441,6 +439,6 @@
     </nav>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
